--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
   <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#4e8ef7">
+  <meta name="theme-color" content="black">
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -31,8 +31,8 @@
   </script>-->
 
   <link href="build/main.css" rel="stylesheet">
-
-</head>
+  <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
+  <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script></head>
 <body>
 
   <!-- Ionic's root component and where the app will load -->
@@ -47,6 +47,5 @@
 
   <!-- The main bundle js is generated during the build process -->
   <script src="build/main.js"></script>
-
 </body>
 </html>
